tests/baselines/reference/asyncInterface_es5.errors.txt
tests/cases/conformance/async/es5/asyncInterface_es5.ts(1,1): error TS1042: 'async' modifier cannot be used here.


==== tests/cases/conformance/async/es5/asyncInterface_es5.ts (1 errors) ====
    async interface I {
    ~~~~~
!!! error TS1042: 'async' modifier cannot be used here.
    }